# insgnss_tools

./: .gitignore  LICENSE  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac  setup.py
PyWrap/INS-GPS/: README.md  globaldefs.py  wrap_magnav_filter.py  wrap_nav_filter.py
aurauas_navigation/: README.md
calib/: magcal_ekf.py  magcal_ellipse.py  transformations.py
calib_old/: mag.py  magcal_ellipse.py
flight_data/: README.md  thor_flight75_WaypointTracker_150squareWaypointNew_2012_10_10.mat
flight_data/Proto/: Proto_FLT09_actuator_controls_0_0.csv  Proto_FLT09_actuator_outputs_0.csv  Proto_FLT09_actuator_outputs_1.csv  Proto_FLT09_airspeed_0.csv  Proto_FLT09_battery_status_0.csv  Proto_FLT09_commander_state_0.csv  Proto_FLT09_cpuload_0.csv  Proto_FLT09_differential_pressure_0.csv  Proto_FLT09_input_rc_0.csv  Proto_FLT09_position_setpoint_triplet_0.csv  Proto_FLT09_sensor_preflight_0.csv  Proto_FLT09_system_power_0.csv  Proto_FLT09_task_stack_info_0.csv  Proto_FLT09_tecs_status_0.csv  Proto_FLT09_telemetry_status_0.csv  Proto_FLT09_vehicle_attitude_0.csv  Proto_FLT09_vehicle_attitude_setpoint_0.csv  Proto_FLT09_vehicle_attitude_setpoint_1.csv  Proto_FLT09_vehicle_command_0.csv  Proto_FLT09_vehicle_global_position_0.csv  Proto_FLT09_vehicle_gps_position_0.csv  Proto_FLT09_vehicle_land_detected_0.csv  Proto_FLT09_vehicle_local_position_0.csv  Proto_FLT09_vehicle_rates_setpoint_0.csv  Proto_FLT09_vehicle_status_0.csv  Proto_FLT09_wind_estimate_0.csv
insgnss_tools/: BasicKinematics.py  Kinematics.py  NavEKF15.py  nav_wrapper.py  pyekf.py
scripts/: MadgwickAHRS.py  alpha_beta.py  battery.py  cdefs.py  compare_filters.py  data_aura.py  data_sentera.py  data_sentera2.py  data_store.py  data_umn.py  flight_data.py  flight_report.py  globaldefs.py  imucal.py  lowpass.py  magnav.py  mags.py  nav_eigen.py  nav_eigen_mag.py  nav_eigen_mag_sep.py  nav_eigen_mag_test.py  nav_eigen_mag_unified.py  nav_eigen_sep.py  nav_eigen_test.py  nav_ekf15.py  nav_ekf15_mag.py  nav_mag.py  nav_openloop.py  nav_orig.py  nav_polarity.py  nav_wrapper.py  navigation.py  new_wrapper2.py  plots.py  pydefs.py  run_filter.py  run_filter_tight.py  run_filters.py  run_optimizer.py  synth_as.py  (+6 more)
scripts/INS-GPS/: globaldefs.py
scripts/archive/: MadgwickAHRS.py  README.md  nav_eigen_double.py  nav_eigen_float.py  nav_eigen_mag_old.py  nav_eigen_old.py  nav_orig.py  otest.py  pydefs.py  synth_asi.py  wrap_nav_filter.py
scripts/flight_data/: README.md
scripts/nav_data/: data_aura.py  data_sentera.py  data_sentera2.py  data_store.py  data_umn.py
scripts/sandbox/: umn3_add_postnav.py
src/: Makefile.am  filters.cxx
src/BFS_raptrs/: pybind11.cpp  pybind11.cxx  uNavINS.cpp  uNavINS.h
src/MadgwickAHRS/: MadgwickAHRS.c  MadgwickAHRS.h  Makefile.am
src/UASLab_RAPTRS/: nav-functions.cpp  nav-functions.h  pybind11.cpp  pybind11.cxx  uNavINS.cpp  uNavINS.h
src/archive/: nav_functions_double.cxx
src/archive/nav_eigen_mag_old/: Makefile.am
src/archive/nav_mag/: Makefile.am
src/core/: structs.cxx  structs.hxx  wgs84.cxx
src/demo/: README.md  ekf15_demo.cpp  ekf15_mag_demo.cpp  ekf15_udp.cpp  linearfit.cxx  linearfit.hxx  netSocket.cxx  netSocket.h  ul.h
src/include/: globaldefs.h
src/magnav/: EKF_15state_quat.c  Makefile.am  nav_interface.h
src/nav/: ekf15.cpp  ekf15_mag.cpp  ekf15_mag.h  ekf15_mag_pybind11.cpp  ekf15_pybind11.cpp  nav_functions.cpp  nav_structs.cpp  nav_structs.h
src/nav_bla/: BasicLinearAlgebra.h  ekf15_bla.cpp  ekf15_bla.h  ekf15_bla_pybind11.cpp  ekf15_mag.cpp  ekf15_mag.h  nav_functions_bla.cpp  nav_functions_bla.h
src/nav_common/: constants.h  constants.hxx  nav_functions.cpp  nav_functions.cxx  nav_functions_double.hxx  nav_functions_float.cxx  nav_functions_float.hxx  structs.cpp  structs.cxx  structs.h  structs.hxx  wgs84.hxx
src/nav_core/: Makefile.am  coremag.c  nav_functions.cxx  nav_functions.hxx  nav_structs.cxx  nav_structs.hxx  wgs84.cxx  wgs84.hxx
src/nav_eigen/: EKF_15state.cxx  EKF_15state.hxx  EKF_15state_quat.cxx  Makefile.am  ekf15_eigen.cpp  ekf15_eigen.h  ekf15_eigen_pybind11.cpp  ekf15_mag.cpp  ekf15_mag_eigen.cpp  ekf15_mag_eigen.h  ekf15_mag_eigen_pybind11.cpp  ekf15_mag_pybind11.cpp  nav_functions.cxx  nav_functions.h  nav_functions.hxx  nav_functions_eigen.cpp  nav_functions_eigen.h  nav_interface.hxx
src/nav_eigen_double/: EKF_15state.cxx
src/nav_eigen_float/: EKF_15state.cxx  EKF_15state.hxx  nav_functions_float.cxx
src/nav_eigen_mag/: EKF_15state_mag.cxx  EKF_15state_mag.hxx  EKF_15state_quat.cxx  Makefile.am  nav_functions.cxx  nav_functions.hxx  nav_interface.hxx
src/nav_eigen_mag_old/: EKF_15state_quat.cxx  Makefile.am  nav_interface.hxx
src/nav_eigen_mag_sep/: EKF_15state_mag.cxx  EKF_15state_mag.hxx
src/nav_eigen_mag_test/: EKF_15state_mag.cxx  EKF_15state_mag.hxx  EKF_15state_quat.cxx  EKF_15state_quat.hxx  Makefile.am  nav_interface.hxx  nav_structs.hxx
src/nav_eigen_mag_unified/: EKF_15state_mag.cxx  EKF_15state_mag.hxx
src/nav_eigen_old/: Makefile.am
src/nav_eigen_sep/: EKF_15state.cxx  EKF_15state.hxx
src/nav_eigen_test/: EKF_15state.hxx  EKF_15state_quat.cxx  Makefile.am
src/nav_ekf15/: EKF_15state.cpp  EKF_15state.cxx  EKF_15state.h  EKF_15state.hxx  pybind11.cpp  pybind11.cxx
src/nav_ekf15_mag/: EKF_15state.cpp  EKF_15state.cxx  EKF_15state.h  EKF_15state.hxx  pybind11.cpp  pybind11.cxx
src/nav_mag/: EKF_15state_quat.c  Makefile.am
src/nav_openloop/: Makefile.am  adns_curt.cxx  adns_curt.hxx  curtquat.cpp  glocal.cpp  glocal.cxx  glocal.h  glocal.hxx  openloop.cpp  openloop.cxx  openloop.h  openloop.hxx  pybind11.cpp  pybind11.cxx
src/nav_orig/: Makefile.am
src/nav_polarity/: EKF_15state_quat.c  Makefile.am  nav_functions.c  nav_functions.h  nav_interface.h
src/nav_structs/: Makefile.am  nav_structs.hxx
src/nav_tightly_ekf17/: nav-functions.cpp  nav-functions.h  pybind11.cpp  uNavINS.cpp  uNavINS.h
src/navigation/: EKF_15state_quat.c  Makefile.am  micronav_ahrs.c  nav_interface.h
src/researchNavigation/: researchnav_interface.h
src/util/: coremag.h  nav_constants.h
(+45 files in other folders)
